src/routes/styles.css
@import '@fontsource/mukta-vaani/200.css';
@import '@fontsource/mukta-vaani/300.css';
@import '@fontsource/mukta-vaani/400.css';
@import '@fontsource/mukta-vaani/500.css';
@import '@fontsource/mukta-vaani/700.css';
@import '@fontsource/mukta-vaani/800.css';
@import '@fontsource-variable/oswald';

:root {
	--font-family-oswald: 'Oswald', sans-serif;
	--font-family-mukta: 'Mukta Vaani', sans-serif;
	--font-family-poppins: 'Poppins', sans-serif;
	--breakpoint-sm: 640px;
	--breakpoint-md: 768px;
	--breakpoint-lg: 1024px;
	--breakpoint-xl: 1280px;
	--color-primary: #f9a826;
	font-family: var(--font-family-poppins);
}

body {
	font-family: 'Mukta Vaani', sans-serif;
	background-color: #292929;
	margin: 0;
	padding: 0;
}

*,
*::before,
*::after {
	box-sizing: border-box;
}

*:focus-visible {
	outline: 0;
	box-shadow: 0 0 0 3px var(--color-primary);
}

a,
button {
	cursor: revert;
}

ol,
ul,
menu {
	list-style: none;
	padding: 0;
}

img {
	max-inline-size: 100%;
	max-block-size: 100%;
}

